# FEngine

./: .gitignore  Podfile  README.md
HelloCocoaPods/: GameEngine.cpp  GameEngine.hpp  UIView.cpp  UIView.hpp  ViewController.mm  bakedColor.inc  bakedMask.inc  bakedText.inc  bundle.js  bundle_game.js  image.ktx2  progress_bg.ktx2  progress_fill.ktx2  red.ktx2
HelloCocoaPods.xcodeproj/: project.pbxproj
android/: settings.gradle
android/app/: build.gradle
android/app/libs/bullet/include/: CMakeLists.txt  cmake_install.cmake
android/app/libs/jsc/JavaScriptCore/: JavaScriptCore.h
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: amongus.glb  bg0.ktx2  bg1.ktx2  bg2.ktx2  bg3.ktx2  bundle.js  bundle_game.js  bundle_ui.js  cube.glb  index.html  platform.glb  tiny.ktx2
android/app/src/main/assets/env/: env_ibl.ktx  env_skybox.ktx  sh.txt
android/app/src/main/assets/spine/: owl.atlas  owl.ktx2
android/app/src/main/cpp/: CMakeLists.txt  GameEngine.cpp  GameEngine.hpp  MyExtension.h  MyTextureLoader.cpp  Test.cpp  bakedColor.inc  bakedColor_ios.inc  bakedMask.inc  bakedMask_ios.inc  bakedText.inc  bakedText_ios.inc
android/app/src/main/java/com/example/helloaar/: MainActivity.kt
android/app/src/main/materials/: baked_color.inc
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
assets/: bakedColor.inc  bakedColor.mat  bakedMask.mat  bakedText.mat  buildMaterials.sh  cmgen  mipgen
ios/HelloCocoaPods/: GameEngine.cpp  GameEngine.hpp  Object_C_Interface.h  ViewController.mm  bundle_game.js
ios/HelloCocoaPods.xcodeproj/: project.pbxproj
